# engine

./: .gitignore  CMakeLists.txt  Makefile  binance.h  game.cpp  glad.c  renderer.cpp  renderer.h
assets/shaders/: lightCubeShader.vert  lightingShader.frag  lightingShader.vert  reflectiveCubeShader.vert  screenShader.frag  skyboxShader.vert
include/: camera.h  ebo.h  mesh.h  model.h  shader.h  texture.h  vao.h  vbo.h  vertex.h  window.h
include/glad/: glad.h
libs/lib/pkgconfig/: assimp.pc
src/: camera.cpp  camera.h  ebo.cpp  game.cpp  glad.c  mesh.cpp  model.cpp  renderer.cpp  renderer.h  shader.cpp  vao.cpp  vbo.cpp  vertex.cpp
src/shader/: lightingShader.frag  lightingShader.vert  shader.frag  shader.h  shader.vert
